--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
 <title>Dernière Mise</title>
 <style>
 html,body{
-  margin:0;
-  background:black;
-  overflow:hidden;
+    margin:0;
+    background:black;
+    overflow:hidden;
 }
 canvas{display:block;}
 </style>
 </head>
 <body>
-
 <canvas id="c"></canvas>
 
 <script>
+/* =========================
+   SETUP
+========================= */
 const canvas = document.getElementById("c");
 const ctx = canvas.getContext("2d");
-
 function resize(){
   canvas.width = innerWidth;
   canvas.height = innerHeight;
@@ -30,26 +31,29 @@ resize();
 let t = 0;
 let choice = null;
 let timeline = [];
-let scene = 0;
-let startTime = 0;
+let currentScene = 0;
+let sceneStart = 0;
 
-/* CAMERA */
-function shake(intensity=1.5){
+/* =========================
+   UTILITIES
+========================= */
+function camShake(intensity=2){
   ctx.translate(
     Math.sin(t*0.08)*intensity,
-    Math.cos(t*0.06)*intensity
+    Math.cos(t*0.07)*intensity
   );
 }
 
-/* TEXT */
-function txt(str,y){
+function text(txt,y){
   ctx.font="18px monospace";
   ctx.fillStyle="white";
-  ctx.fillText(str,40,y);
+  ctx.fillText(txt,40,y);
 }
 
-/* DRAWINGS */
-function face(emotion){
+/* =========================
+   DRAWING (REALISTIC TRAITS)
+========================= */
+function faceExpression(type){
   const cx = canvas.width/2;
   const cy = canvas.height/2;
 
@@ -64,11 +68,11 @@ function face(emotion){
 
   // eye
   ctx.beginPath();
-  ctx.arc(cx-40,cy,30,Math.PI*0.1,Math.PI*0.9);
+  ctx.arc(cx-40,cy,28,Math.PI*0.1,Math.PI*0.9);
   ctx.stroke();
 
-  // eyelid
-  let lid = emotion==="shock"?12:emotion==="fear"?6:2;
+  // eyelid emotion
+  let lid = type==="shock"?10:type==="fear"?4:1;
   ctx.beginPath();
   ctx.moveTo(cx-70,cy);
   ctx.lineTo(cx-10,cy+lid);
@@ -76,7 +80,7 @@ function face(emotion){
 
   // mouth
   ctx.beginPath();
-  if(emotion==="shock"){
+  if(type==="shock"){
     ctx.arc(cx-40,cy+60,14,0,Math.PI*2);
   }else{
     ctx.moveTo(cx-60,cy+60);
@@ -87,84 +91,90 @@ function face(emotion){
   ctx.restore();
 }
 
-function poker(players){
+function pokerTable(players){
   ctx.strokeStyle="white";
+  ctx.lineWidth=1;
   ctx.strokeRect(
-    canvas.width/2-220,
-    canvas.height/2-110,
-    440,220
+    canvas.width/2-200,
+    canvas.height/2-100,
+    400,200
   );
   for(let i=0;i<players;i++){
     ctx.beginPath();
     ctx.arc(
-      canvas.width/2-150+i*(300/(players-1||1)),
-      canvas.height/2+150,
+      canvas.width/2-120+i*(240/(players-1||1)),
+      canvas.height/2+140,
       20,0,Math.PI*2
     );
     ctx.stroke();
   }
 }
 
-function gun(){
+function gunFront(){
   ctx.strokeStyle="white";
   ctx.lineWidth=2;
   ctx.beginPath();
-  ctx.arc(canvas.width/2,canvas.height/2,90,0,Math.PI*2);
+  ctx.arc(canvas.width/2,canvas.height/2,80,0,Math.PI*2);
   ctx.stroke();
   ctx.beginPath();
   ctx.arc(canvas.width/2,canvas.height/2,40,0,Math.PI*2);
   ctx.stroke();
 }
 
-/* SCENES */
+/* =========================
+   SCENES
+========================= */
 function intro(){
-  txt("TABLE DE POKER. SILENCE.",80);
-  txt("Un joueur n'a plus de jetons.",110);
-  txt("CLIC GAUCHE : tirer",160);
-  txt("CLIC DROIT : donner des jetons",190);
+  text("TABLE DE POKER. SILENCE.",80);
+  text("Un joueur n'a plus de jetons.",110);
+  text("[CLIQUE À GAUCHE] Tirer",160);
+  text("[CLIQUE À DROITE] Donner des jetons",190);
 }
 
-function lost(){
-  face("shock");
-  txt("Il perd la manche.",80);
+function lossReaction(){
+  faceExpression("shock");
+  text("Il a perdu la manche.",80);
 }
 
-function game(){
-  poker(choice==="kill"?3:4);
-  txt("Cartes. Jetons. Tension.",80);
+function pokerScene(players){
+  pokerTable(players);
+  text("Cartes. Jetons. Regards.",80);
 }
 
-function end(){
-  gun();
-  txt("Respiration.",80);
-  txt("Décision finale.",110);
+function finalGun(){
+  gunFront();
+  text("Respiration.",80);
+  text("Décision.",110);
 }
 
-/* TIMELINE */
-function build(){
+/* =========================
+   TIMELINE
+========================= */
+function buildTimeline(){
   timeline = [
-    {d:10000, f:intro},
-    {d:7000, f:lost},
-    {d:30000, f:game},
-    {d:7000, f:()=>face("fear")},
-    {d:10000, f:end},
-    {d:3000, f:()=>{ctx.fillStyle="white";ctx.fillRect(0,0,canvas.width,canvas.height);}}
+    {dur:8000, draw:intro},
+    {dur:6000, draw:lossReaction},
+    {dur:20000, draw:()=>pokerScene(choice==="kill"?3:4)},
+    {dur:6000, draw:()=>faceExpression("fear")},
+    {dur:8000, draw:finalGun},
+    {dur:2000, draw:()=>{ctx.fillStyle="white";ctx.fillRect(0,0,canvas.width,canvas.height);}}
   ];
 }
 
-/* LOOP */
+/* =========================
+   LOOP
+========================= */
 function loop(ts){
   ctx.fillStyle="black";
   ctx.fillRect(0,0,canvas.width,canvas.height);
-
   ctx.save();
-  shake();
+  camShake(1.5);
 
-  if(timeline[scene]){
-    timeline[scene].f();
-    if(ts-startTime > timeline[scene].d){
-      scene++;
-      startTime = ts;
+  if(timeline[currentScene]){
+    timeline[currentScene].draw();
+    if(ts-sceneStart > timeline[currentScene].dur){
+      currentScene++;
+      sceneStart = ts;
     }
   }
 
@@ -173,16 +183,17 @@ function loop(ts){
   requestAnimationFrame(loop);
 }
 
-/* INPUT */
+/* =========================
+   INTERACTION
+========================= */
 canvas.addEventListener("click",e=>{
   if(choice) return;
   choice = e.clientX < innerWidth/2 ? "kill" : "spare";
-  build();
-  startTime = performance.now();
+  buildTimeline();
+  sceneStart = performance.now();
 });
 
 requestAnimationFrame(loop);
 </script>
-
 </body>
 </html>
