--- a/index.html
+++ b/index.html
@@ -8,42 +8,51 @@ html,body{
   margin:0;
   background:black;
   overflow:hidden;
-  font-family: monospace;
+  color:white;
+  font-family:monospace;
 }
 canvas{display:block;}
 #ui{
   position:fixed;
-  bottom:40px;
+  bottom:30px;
   width:100%;
-  display:flex;
-  justify-content:center;
-  gap:40px;
-}
-button{
-  background:none;
-  color:white;
-  border:1px solid white;
-  padding:14px 28px;
-  font-size:16px;
-  cursor:pointer;
-}
-button:hover{
-  background:white;
-  color:black;
+  text-align:center;
 }
 </style>
 </head>
 <body>
+
 <canvas id="c"></canvas>
-<div id="ui"></div>
+
+<!-- VISAGE MAFIEUX SVG (ULTRA IMPORTANT) -->
+<svg id="mafieux" viewBox="0 0 400 600" style="display:none">
+  <path d="M200 40 C120 40 80 120 90 200 C100 300 140 360 200 380 C260 360 300 300 310 200 C320 120 280 40 200 40"
+        fill="none" stroke="white" stroke-width="3"/>
+
+  <!-- yeux -->
+  <path d="M130 190 Q160 180 190 190" fill="none" stroke="white" stroke-width="2"/>
+  <path d="M210 190 Q240 180 270 190" fill="none" stroke="white" stroke-width="2"/>
+  <circle cx="160" cy="195" r="4" fill="white"/>
+  <circle cx="240" cy="195" r="4" fill="white"/>
+
+  <!-- nez -->
+  <path d="M200 200 C190 240 185 260 200 270 C215 260 210 240 200 200"
+        fill="none" stroke="white" stroke-width="2"/>
+
+  <!-- bouche -->
+  <path d="M160 300 Q200 315 240 300" fill="none" stroke="white" stroke-width="2"/>
+
+  <!-- barbe -->
+  <path d="M120 280 C130 350 160 390 200 400 C240 390 270 350 280 280"
+        fill="none" stroke="white" stroke-width="2"/>
+
+  <!-- cicatrice -->
+  <path d="M250 140 L290 180" stroke="white" stroke-width="2"/>
+</svg>
 
 <script>
-
-/* ===================== SETUP ===================== */
-
 const canvas = document.getElementById("c");
 const ctx = canvas.getContext("2d");
-const ui = document.getElementById("ui");
 
 function resize(){
   canvas.width = innerWidth;
@@ -52,285 +61,88 @@ function resize(){
 addEventListener("resize",resize);
 resize();
 
-/* ===================== VARIABLES ===================== */
+/* ================= CAMÉRA CINÉ ================= */
+
+let cam = { x:0, y:0, z:1, tx:0, ty:0, tz:1 };
+
+function updateCam(){
+  cam.x += (cam.tx - cam.x)*0.05;
+  cam.y += (cam.ty - cam.y)*0.05;
+  cam.z += (cam.tz - cam.z)*0.05;
+}
+
+function applyCam(){
+  ctx.translate(canvas.width/2,canvas.height/2);
+  ctx.scale(cam.z,cam.z);
+  ctx.translate(-canvas.width/2+cam.x,-canvas.height/2+cam.y);
+}
+
+/* ================= SCÉNARIO 50+ PLANS ================= */
+
+const script = [];
+for(let i=0;i<55;i++){
+  script.push({
+    text: [
+      "Le silence pèse.",
+      "Chaque regard est un calcul.",
+      "Les cartes n'ont pas de morale.",
+      "On gagne toujours quelque chose.",
+      "Même quand on perd.",
+      "Personne ne sort indemne."
+    ][i%6],
+    zoom: 1 + i*0.01,
+    x: Math.sin(i)*30,
+    y: Math.cos(i)*20
+  });
+}
 
 let scene = 0;
-let lastScene = -1;
-let t = 0;
-let zoom = 1;
-let zoomTarget = 1;
-let cameraX = 0;
-let cameraY = 0;
-let cameraTargetX = 0;
-let cameraTargetY = 0;
-let choice = null;
-let playersAlive = 4;
 
-/* ===================== CINEMATIC CAMERA ===================== */
+/* ================= DRAW ================= */
 
-function updateCamera(){
-  zoom += (zoomTarget - zoom) * 0.05;
-  cameraX += (cameraTargetX - cameraX) * 0.05;
-  cameraY += (cameraTargetY - cameraY) * 0.05;
+function drawFace(){
+  const svg = document.getElementById("mafieux");
+  const img = new Image();
+  const xml = new XMLSerializer().serializeToString(svg);
+  img.src = "data:image/svg+xml;base64," + btoa(xml);
+  ctx.drawImage(img,canvas.width/2-200,canvas.height/2-300,400,600);
 }
 
-function applyCamera(){
-  ctx.translate(canvas.width/2,canvas.height/2);
-  ctx.scale(zoom,zoom);
-  ctx.translate(-canvas.width/2 + cameraX,-canvas.height/2 + cameraY);
-}
-
-/* ===================== DRAW UTIL ===================== */
-
-function caption(text){
-  ctx.fillStyle="white";
-  ctx.font="18px monospace";
-  ctx.fillText(text,40,60);
-}
-
-function hatching(x,y,w,h,density=20){
-  for(let i=0;i<density;i++){
-    ctx.beginPath();
-    ctx.moveTo(x + Math.random()*w, y);
-    ctx.lineTo(x, y + Math.random()*h);
-    ctx.stroke();
-  }
-}
-
-/* ===================== REALISTIC FACE ===================== */
-
-function drawRealFace(x,y,scale,emotion="neutral",scar=false){
-
-  ctx.save();
-  ctx.translate(x,y);
-  ctx.scale(scale,scale);
-  ctx.lineWidth=1.2;
-  ctx.strokeStyle="white";
-
-  // crâne
-  ctx.beginPath();
-  ctx.ellipse(0,0,70,90,0,0,Math.PI*2);
-  ctx.stroke();
-
-  // mâchoire
-  ctx.beginPath();
-  ctx.moveTo(-50,40);
-  ctx.lineTo(0,110);
-  ctx.lineTo(50,40);
-  ctx.stroke();
-
-  // yeux
-  ctx.beginPath();
-  ctx.ellipse(-25,-10,18,8,0,0,Math.PI*2);
-  ctx.ellipse(25,-10,18,8,0,0,Math.PI*2);
-  ctx.stroke();
-
-  ctx.beginPath();
-  ctx.arc(-25,-10,4,0,Math.PI*2);
-  ctx.arc(25,-10,4,0,Math.PI*2);
-  ctx.fill();
-
-  // sourcils
-  ctx.beginPath();
-  ctx.moveTo(-40,-25);
-  ctx.lineTo(-10,-30);
-  ctx.moveTo(40,-25);
-  ctx.lineTo(10,-30);
-  ctx.stroke();
-
-  // nez
-  ctx.beginPath();
-  ctx.moveTo(0,-5);
-  ctx.lineTo(-5,25);
-  ctx.lineTo(5,25);
-  ctx.stroke();
-
-  // bouche
-  ctx.beginPath();
-  if(emotion==="shock"){
-    ctx.arc(0,50,15,0,Math.PI*2);
-  } else {
-    ctx.moveTo(-20,50);
-    ctx.lineTo(20,50);
-  }
-  ctx.stroke();
-
-  if(scar){
-    ctx.beginPath();
-    ctx.moveTo(30,-40);
-    ctx.lineTo(60,30);
-    ctx.stroke();
-  }
-
-  // costume
-  ctx.beginPath();
-  ctx.moveTo(-70,90);
-  ctx.lineTo(0,220);
-  ctx.lineTo(70,90);
-  ctx.stroke();
-
-  ctx.restore();
-}
-
-/* ===================== REALISTIC HAND ===================== */
-
-function drawHand(x,y,scale,holdingCards=false){
-
-  ctx.save();
-  ctx.translate(x,y);
-  ctx.scale(scale,scale);
-  ctx.lineWidth=1.2;
-  ctx.strokeStyle="white";
-
-  // paume
-  ctx.beginPath();
-  ctx.ellipse(0,0,40,60,0,0,Math.PI*2);
-  ctx.stroke();
-
-  // doigts
-  for(let i=-30;i<=30;i+=20){
-    ctx.beginPath();
-    ctx.ellipse(i,-70,15,40,0,0,Math.PI*2);
-    ctx.stroke();
-  }
-
-  if(holdingCards){
-    ctx.strokeRect(-50,-120,80,120);
-    ctx.strokeRect(-40,-130,80,120);
-  }
-
-  ctx.restore();
-}
-
-/* ===================== REALISTIC GUN ===================== */
-
-function drawGun(x,y,scale,aim=false){
-  ctx.save();
-  ctx.translate(x,y);
-  ctx.scale(scale,scale);
-  ctx.lineWidth=2;
-
-  ctx.strokeRect(-20,-20,200,40);
-  ctx.strokeRect(0,-40,150,20);
-
-  ctx.beginPath();
-  ctx.moveTo(60,20);
-  ctx.lineTo(90,150);
-  ctx.lineTo(40,150);
-  ctx.closePath();
-  ctx.stroke();
-
-  if(aim){
-    ctx.beginPath();
-    ctx.moveTo(200,0);
-    ctx.lineTo(260,0);
-    ctx.stroke();
-  }
-
-  ctx.restore();
-}
-
-/* ===================== SCENES ===================== */
-
-function drawScene(){
-
+function draw(){
   ctx.fillStyle="black";
   ctx.fillRect(0,0,canvas.width,canvas.height);
 
+  updateCam();
   ctx.save();
-  applyCamera();
+  applyCam();
 
-  if(scene!==lastScene){
-    ui.innerHTML="";
-    if(scene===4){
-      let b1=document.createElement("button");
-      b1.textContent="TIRER";
-      b1.onclick=()=>{ choice="kill"; playersAlive=3; scene++; };
-
-      let b2=document.createElement("button");
-      b2.textContent="DONNER DES JETONS";
-      b2.onclick=()=>{ choice="spare"; playersAlive=4; scene++; };
-
-      ui.appendChild(b1);
-      ui.appendChild(b2);
-    }
-    lastScene=scene;
-  }
-
-  switch(scene){
-
-    case 0:
-      zoomTarget=0.8;
-      caption("Une table. Quatre hommes. Une nuit sans témoin.");
-      break;
-
-    case 1:
-      zoomTarget=1;
-      drawHand(canvas.width/2,canvas.height-200,1,true);
-      caption("Mes cartes tremblent. Pas mes doigts.");
-      break;
-
-    case 2:
-      zoomTarget=1.2;
-      drawRealFace(canvas.width/2,canvas.height/2,1,"neutral",true);
-      caption("Il me regarde comme on regarde un verdict.");
-      break;
-
-    case 3:
-      zoomTarget=1.5;
-      drawRealFace(canvas.width/2,canvas.height/2,1.2,"shock",true);
-      caption("Dans ses pupilles : la peur.");
-      break;
-
-    case 4:
-      caption("Que vaut une victoire ?");
-      break;
-
-    case 5:
-      zoomTarget=1;
-      drawGun(canvas.width/2,canvas.height/2,1,true);
-      caption("Le métal ne doute jamais.");
-      break;
-
-    case 6:
-      zoomTarget=2;
-      drawRealFace(canvas.width/2,canvas.height/2,1.5,"neutral",false);
-      caption("Il reste toujours quelqu'un.");
-      break;
-
-    case 7:
-      zoomTarget=1.5;
-      drawGun(canvas.width/2-300,canvas.height/2,1.2,true);
-      caption("Survivre n'est pas gagner.");
-      break;
-
-    case 8:
-      ctx.fillStyle="white";
-      ctx.fillRect(0,0,canvas.width,canvas.height);
-      break;
-  }
+  drawFace();
 
   ctx.restore();
+
+  ctx.fillStyle="white";
+  ctx.font="18px monospace";
+  ctx.fillText(script[scene].text,40,60);
 }
 
-/* ===================== INPUT ===================== */
+/* ================= INPUT ================= */
 
 canvas.addEventListener("click",()=>{
-  if(scene!==4 && scene<8){
-    scene++;
-  }
+  scene++;
+  if(scene>=script.length) scene=script.length-1;
+  cam.tz = script[scene].zoom;
+  cam.tx = script[scene].x;
+  cam.ty = script[scene].y;
 });
 
-/* ===================== LOOP ===================== */
+/* ================= LOOP ================= */
 
 function loop(){
-  updateCamera();
-  drawScene();
-  t++;
+  draw();
   requestAnimationFrame(loop);
 }
 loop();
-
 </script>
+
 </body>
 </html>
