--- a/index.html
+++ b/index.html
@@ -1,106 +1,172 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Loup-Garou Win Rate Calculator</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #111;
-      color: #eee;
-      padding: 20px;
-    }
-    input, button {
-      padding: 8px;
-      margin: 5px 0;
-      width: 200px;
-    }
-    button {
-      cursor: pointer;
-    }
-    .result {
-      margin-top: 20px;
-      font-size: 18px;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>LG Winrate Advanced Simulator</title>
+<style>
+body { background:#111; color:#eee; font-family:Arial; padding:20px; }
+input, button { padding:6px; margin:5px 0; width:200px; }
+button { cursor:pointer; }
+.result { margin-top:20px; font-size:18px; }
+</style>
 </head>
 <body>
 
-<h1>Calculateur de Win Rate – Loup-Garou</h1>
+<h2>Simulateur Win Rate Loup-Garou (3 tours max)</h2>
 
-<label>Nombre total de joueurs</label><br>
+<label>Joueurs totaux</label><br>
 <input type="number" id="players" value="8"><br>
 
 <label>Nombre de loups</label><br>
 <input type="number" id="wolves" value="2"><br>
 
-<label>Joueurs à dévoilement</label><br>
-<input type="number" id="revealed" value="4"><br>
+<label>Joueurs dévoilement</label><br>
+<input type="number" id="revealed" value="2"><br>
 
-<label>Nombre de parties simulées</label><br>
-<input type="number" id="games" value="100"><br>
+<label>Nombre de simulations</label><br>
+<input type="number" id="games" value="1000"><br>
 
-<button onclick="simulate()">Calculer</button>
+<button onclick="simulate()">Simuler</button>
 
 <div class="result" id="result"></div>
 
 <script>
+
+function randomChoice(arr) {
+  return arr[Math.floor(Math.random() * arr.length)];
+}
+
+function simulateGame(players, wolvesCount, revealedCount) {
+
+  // Création rôles
+  let roles = [];
+  for (let i = 0; i < wolvesCount; i++) roles.push("wolf");
+  roles.push("witch");
+  roles.push("hunter");
+
+  while (roles.length < players)
+    roles.push("villager");
+
+  roles.sort(() => Math.random() - 0.5);
+
+  let alive = Array(players).fill(true);
+
+  // Tirage dévoilement
+  let revealed = new Set();
+  while (revealed.size < revealedCount) {
+    revealed.add(Math.floor(Math.random() * players));
+  }
+
+  // Loups dévoilés meurent instantanément
+  revealed.forEach(i => {
+    if (roles[i] === "wolf") alive[i] = false;
+  });
+
+  let witchHeal = true;
+  let witchKill = true;
+
+  function countAlive(type) {
+    return roles.filter((r,i) => r===type && alive[i]).length;
+  }
+
+  function aliveIndexes() {
+    return roles.map((r,i)=>alive[i]?i:null).filter(i=>i!==null);
+  }
+
+  function checkWin() {
+    let wolvesAlive = countAlive("wolf");
+    let villagersAlive = aliveIndexes().length - wolvesAlive;
+    if (wolvesAlive === 0) return "village";
+    if (wolvesAlive >= villagersAlive) return "wolves";
+    return null;
+  }
+
+  // Max 3 tours
+  for (let turn = 0; turn < 3; turn++) {
+
+    // --- NUIT ---
+    let wolvesAlive = countAlive("wolf");
+    if (wolvesAlive > 0) {
+      let targets = aliveIndexes().filter(i =>
+        roles[i] !== "wolf" &&
+        !(revealed.has(i) && roles[i] !== "wolf") // innocent dévoilé intouchable
+      );
+
+      if (targets.length > 0) {
+        let victim = randomChoice(targets);
+
+        // Sorcière peut sauver
+        if (witchHeal && roles.includes("witch")) {
+          if (Math.random() < 0.5) {
+            witchHeal = false;
+            victim = null;
+          }
+        }
+
+        if (victim !== null) alive[victim] = false;
+
+        // Potion de mort
+        if (witchKill && roles.includes("witch")) {
+          if (Math.random() < 0.5) {
+            let killTargets = aliveIndexes().filter(i => roles[i] !== "witch");
+            if (killTargets.length > 0) {
+              alive[randomChoice(killTargets)] = false;
+            }
+            witchKill = false;
+          }
+        }
+      }
+    }
+
+    let win = checkWin();
+    if (win) return win;
+
+    // --- JOUR ---
+    let voteTargets = aliveIndexes().filter(i =>
+      !(revealed.has(i) && roles[i] !== "wolf")
+    );
+
+    if (voteTargets.length > 0) {
+      let voted = randomChoice(voteTargets);
+      alive[voted] = false;
+
+      // Chasseur tire
+      if (roles[voted] === "hunter") {
+        let shotTargets = aliveIndexes();
+        if (shotTargets.length > 0) {
+          alive[randomChoice(shotTargets)] = false;
+        }
+      }
+    }
+
+    win = checkWin();
+    if (win) return win;
+  }
+
+  return "village"; // si 3 tours passent sans parité
+}
+
 function simulate() {
-  const players = Number(playersInput.value);
-  const wolves = Number(wolvesInput.value);
-  const revealed = Number(revealedInput.value);
-  const games = Number(gamesInput.value);
+
+  const players = +document.getElementById("players").value;
+  const wolves = +document.getElementById("wolves").value;
+  const revealed = +document.getElementById("revealed").value;
+  const games = +document.getElementById("games").value;
 
   let wolfWins = 0;
   let villageWins = 0;
 
-  for (let g = 0; g < games; g++) {
-    // Tirage des loups
-    let roles = Array(players).fill("village");
-    for (let i = 0; i < wolves; i++) roles[i] = "wolf";
-    roles.sort(() => Math.random() - 0.5);
-
-    // Tirage des dévoilements
-    let revealedIndexes = [];
-    while (revealedIndexes.length < revealed) {
-      let r = Math.floor(Math.random() * players);
-      if (!revealedIndexes.includes(r)) revealedIndexes.push(r);
-    }
-
-    let wolvesAlive = roles.filter(r => r === "wolf").length;
-    let villagersAlive = players - wolvesAlive;
-
-    // Loups dévoilés meurent immédiatement
-    revealedIndexes.forEach(i => {
-      if (roles[i] === "wolf") {
-        wolvesAlive--;
-      }
-    });
-
-    // Innocents dévoilés sont intouchables
-    let untouchable = revealedIndexes.filter(i => roles[i] === "village").length;
-
-    let killableVillagers = villagersAlive - untouchable;
-
-    // Simulation simple
-    if (wolvesAlive >= killableVillagers) {
-      wolfWins++;
-    } else {
-      villageWins++;
-    }
+  for (let i = 0; i < games; i++) {
+    let result = simulateGame(players, wolves, revealed);
+    if (result === "wolves") wolfWins++;
+    else villageWins++;
   }
 
-  result.innerHTML = `
-    <p>Victoire Loups : ${(wolfWins / games * 100).toFixed(1)}%</p>
-    <p>Victoire Village : ${(villageWins / games * 100).toFixed(1)}%</p>
-  `;
+  document.getElementById("result").innerHTML =
+    `Victoire Loups : ${(wolfWins/games*100).toFixed(1)}%<br>
+     Victoire Village : ${(villageWins/games*100).toFixed(1)}%`;
 }
 
-const playersInput = document.getElementById("players");
-const wolvesInput = document.getElementById("wolves");
-const revealedInput = document.getElementById("revealed");
-const gamesInput = document.getElementById("games");
 </script>
-
 </body>
 </html>
